--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,116 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.softserve.edu</groupId>
-  <artifactId>taqc202I05</artifactId>
-  <version>1.0</version>
+	<groupId>com.softserve.edu</groupId>
+	<artifactId>taqc202I05</artifactId>
+	<version>1.0</version>
 
-  <packaging>jar</packaging>
-  <name>taqc202I05</name>
-  <url>http://maven.apache.org</url>
+	<packaging>jar</packaging>
+	<name>${project.artifactId}</name>
+	<url>http://maven.apache.org</url>
 
-  <dependencies>
+	<properties>
+		<!-- - - - - - Encoding - - - - - -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!-- - - - - - Java - - - - - -->
+		<java.version>1.8</java.version>
+		<!-- - - - - - Test - - - - - -->
+		<run.testng.xml>testng.xml</run.testng.xml>
+		<!-- - - - - - Reports - - - - - -->
+		<testng.reports.directory>./target/surefire-reports/test-output</testng.reports.directory>
+	</properties>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
 
-  </dependencies>
+	<dependencies>
+
+		<!-- - - - - - Test - - - - - -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- <dependency> -->
+		<!-- <groupId>org.testng</groupId> -->
+		<!-- <artifactId>testng</artifactId> -->
+		<!-- <version>7.4.0</version> -->
+		<!-- <scope>test</scope> -->
+		<!-- </dependency> -->
+
+		<!-- - - - - - Automation - - - - - -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>3.141.59</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>4.4.3</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+
+	</dependencies>
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
+				</configuration>
+				<!-- <configuration> -->
+				<!-- <argLine>-Xms512m -Xmx1024m</argLine> -->
+				<!-- <skipTests>false</skipTests> -->
+				<!-- <systemPropertyVariables> -->
+				<!-- <surefire.application.password> -->
+				<!-- ${application.password} -->
+				<!-- </surefire.application.password> -->
+				<!-- </systemPropertyVariables> -->
+				<!-- <suiteXmlFiles> -->
+				<!-- <suiteXmlFile>${run.testng.xml}</suiteXmlFile> -->
+				<!-- </suiteXmlFiles> -->
+				<!-- <reportsDirectory>${testng.reports.directory}</reportsDirectory> -->
+				<!-- </configuration> -->
+			</plugin>
+
+		</plugins>
+	</build>
 
 </project>
