--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,13 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>org.testng</groupId> -->
-		<!-- <artifactId>testng</artifactId> -->
-		<!-- <version>7.4.0</version> -->
-		<!-- <scope>test</scope> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<!-- <version>7.4.0</version> -->
+			<version>6.14.3</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- - - - - - Automation - - - - - -->
 		<dependency>
