--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 
 	<properties>
 		<!-- - - - - - Encoding - - - - - -->
+		<application.password>default</application.password>
+		<!-- - - - - - Encoding - - - - - -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- - - - - - Java - - - - - -->
 		<java.version>1.8</java.version>
@@ -91,24 +93,24 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
-				<configuration>
-					<includes>
-						<include>**/*.java</include>
-					</includes>
-				</configuration>
 				<!-- <configuration> -->
-				<!-- <argLine>-Xms512m -Xmx1024m</argLine> -->
-				<!-- <skipTests>false</skipTests> -->
-				<!-- <systemPropertyVariables> -->
-				<!-- <surefire.application.password> -->
-				<!-- ${application.password} -->
-				<!-- </surefire.application.password> -->
-				<!-- </systemPropertyVariables> -->
-				<!-- <suiteXmlFiles> -->
-				<!-- <suiteXmlFile>${run.testng.xml}</suiteXmlFile> -->
-				<!-- </suiteXmlFiles> -->
-				<!-- <reportsDirectory>${testng.reports.directory}</reportsDirectory> -->
+				<!-- <includes> -->
+				<!-- <include>**/*.java</include> -->
+				<!-- </includes> -->
 				<!-- </configuration> -->
+				<configuration>
+					<argLine>-Xms512m -Xmx1024m</argLine>
+					<skipTests>false</skipTests>
+					<systemPropertyVariables>
+						<surefire.application.password>
+							${application.password}
+						</surefire.application.password>
+					</systemPropertyVariables>
+					<suiteXmlFiles>
+						<suiteXmlFile>runTestNG1.xml</suiteXmlFile>
+					</suiteXmlFiles>
+					<reportsDirectory>${testng.reports.directory}</reportsDirectory>
+				</configuration>
 			</plugin>
 
 		</plugins>
