--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<run.testng.xml>testng.xml</run.testng.xml>
 		<!-- - - - - - Reports - - - - - -->
 		<testng.reports.directory>./target/surefire-reports/test-output</testng.reports.directory>
+		<aspectj.version>1.9.7</aspectj.version>
 	</properties>
 
 
@@ -78,6 +79,35 @@
 			<version>2.8.0</version>
 		</dependency>
 
+		<!-- - - - Logger - - - -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.32</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.32</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- - - - Reports - - - -->
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-testng</artifactId>
+			<version>2.14.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectj.version}</version>
+			<!-- <scope>test</scope> -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -124,6 +154,9 @@
 						<suiteXmlFile>runTestNG1.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<reportsDirectory>${testng.reports.directory}</reportsDirectory>
+					<argLine>
+						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+					</argLine>
 				</configuration>
 			</plugin>
 
